<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <VideoView
        android:id="@+id/videoView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:layout_centerInParent="true"
        android:foregroundGravity="center"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparent"
        android:orientation="vertical"
        android:clickable="true">

        <TextView
            android:id="@+id/textview"
            style="@style/TextView_Large_orange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center_horizontal"
            android:text="@string/my54" />

        <TextView
            style="@style/TextView_white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textview"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:inputType="textMultiLine"
            android:padding="@dimen/_10sdp"
            android:text="@string/text" />

        <LinearLayout
            android:id="@+id/ll_continue"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_30sdp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/_40sdp"
            android:background="@drawable/button_barder">

            <RelativeLayout
                android:id="@+id/layout_for_login"
                android:layout_width="@dimen/_150sdp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_1sdp">

                <TextView
                    android:id="@+id/text"
                    style="@style/TextView_Large"
                    android:layout_width="@dimen/_120sdp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingLeft="@dimen/_10sdp"
                    android:text="@string/btn_continue"
                    tools:ignore="RtlSymmetry" />

                <android.support.v7.widget.AppCompatImageView
                    android:layout_width="@dimen/_15sdp"
                    android:layout_height="match_parent"
                    android:layout_alignParentTop="true"
                    android:layout_toLeftOf="@+id/imageView"
                    android:scaleType="fitXY"
                    android:src="@drawable/shap_button" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="@dimen/_28sdp"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/btn_side_background"
                    android:paddingLeft="@dimen/_5sdp"
                    android:paddingRight="@dimen/_8sdp"
                    android:src="@drawable/ic_arrow_forward"
                    android:tint="@color/white" />

            </RelativeLayout>

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>